k8s/apps/transmission/base/transmission-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission-app
  labels:
    app: transmission
    role: transmission
spec:
  serviceName: transmission
  replicas: 1
  selector:
    matchLabels:
      app: transmission
      role: app
  template:
    metadata:
      labels:
        app: transmission
        role: app
    spec:
      containers:
      # image docs: https://github.com/linuxserver/docker-transmission
      - name: transmission
        image: lscr.io/linuxserver/transmission:4.0.5-r0-ls217
        
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "64Mi"

        volumeMounts:
          # where transmission should store config files and logs.
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /watch
            name: watch

        ports:
          - name: web-ui
            containerPort: 9091
          - name: torrent-tcp
            containerPort: 51413
          - name: torrent-udp
            containerPort: 51413
            protocol: UDP

      # pod-level volumes:
      volumes:
        - name: config
          hostPath:
            path: /mnt/thedatapool/app-data/transmission/config
        - name: downloads
          hostPath:
            path: /mnt/thedatapool/no-backup/app-data/transmission/downloads
        - name: watch
          hostPath:
            path: /mnt/thedatapool/no-backup/app-data/transmission/watch
