k8s/apps/transmission/base/transmission-service-torrent-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-torrent-ports
  labels:
    app: transmission
spec:
  # NOTE: Using NodePort to allow EXTERNAL traffic to be forwarded to pod.
  #       ...because Ingress is HTTP only and doesn't support raw UDP/TCP-level forwarding.
  type: NodePort
  ports:
    - name: torrent-tcp
      port: 51413
      nodePort: 51413
      targetPort: torrent-tcp
      protocol: TCP
    
    - name: torrent-udp
      port: 51413
      nodePort: 51413
      targetPort: torrent-udp
      protocol: UDP

  selector:
    app: transmission
    role: app
