k8s/apps/transmission/base/transmission-service-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-web-ui
  labels:
    app: transmission
spec:
  # Exposes the Service on a cluster-internal IP. Choosing this value makes the Service only reachable from within the cluster
  # We expose it externally via an Ingress so that we can match requested domain/url to map here.
  type: ClusterIP
  ports:
    - name: web-ui
      port: 80
      targetPort: web-ui

  selector:
    app: transmission
    role: app
