k8s/apps/transmission/base/transmission-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
spec:
  tls:
  - hosts:
      - transmission.activescott.com
    secretName: transmission-activescott-com-tls

  rules:
  - host: transmission.activescott.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service-web-ui
            # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
            port:
              name: web-ui
